# tsuki-lang

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  example.tsuki  grammar.txt
include/: Compiler.h  Lexer.h  Parser.h  TokenType.h  Value.h  Visitor.h
include/VM/: Debug.h  VM.h
include/expressions/: AssignExpr.h  BinaryExpr.h  BooleanExpr.h  Expr.h  GroupingExpr.h  LiteralExpr.h  NameExpr.h  PostfixExpr.h  PrefixExpr.h  VarExpr.h
include/stmt/: BlockStmt.h  ExprStmt.h  IfStmt.h  PrintStmt.h  Stmt.h  VarStmt.h  WhileStmt.h
src/: Compiler.cpp  Debug.cpp  Lexer.cpp  Parser.cpp  TokenType.cpp  VM.cpp  main.cpp
src/cli/: main.cpp
src/compiler/: Compiler.cpp  Compiler.h
src/expressions/: AssignExpr.cpp  BinaryExpr.cpp  BooleanExpr.cpp  GroupingExpr.cpp  LiteralExpr.cpp  NameExpr.cpp  PostfixExpr.cpp  PrefixExpr.cpp  VarExpr.cpp
src/frontend/ast/: Ast.cpp  Ast.h  Expr.h  Stmt.h
src/frontend/lexer/: Lexer.cpp  Lexer.h
src/frontend/parser/: Parser.cpp  Parser.h
src/frontend/token/: TokenType.cpp  TokenType.h
src/ir/: Chunk.cpp  Chunk.h  Instruction.h  OpCode.h
src/runtime/value/: Value.h
src/runtime/vm/: VM.cpp  VM.h
src/stmt/: BlockStmt.cpp  ExprStmt.cpp  IfStmt.cpp  PrintStmt.cpp  VarStmt.cpp  WhileStmt.cpp
src/tools/debug/: Debug.cpp  Debug.h
tests/: lexer_test.cpp
